UI alignment issue fixed

--- a/components/posts/post-detail/post-content.module.css
+++ b/components/posts/post-detail/post-content.module.css
@@ -33,8 +33,7 @@
   }
 
   .code {
-    
-    width: 68.2%;
+    width: 100%;
     max-width: 850px;
     border: 7px solid #87848b;
     padding: 0px;
